DASHBOARD 2.0 News widget readability fix for some width

--- a/thinktime-fix.css
+++ b/thinktime-fix.css
@@ -15,6 +15,7 @@ DASHBOARD 2.0 Desktop View - Ticket name Bold
 DASHBOARD 2.0 Tables in widgets - Head cells text wrap
 DASHBOARD 2.0 News widget readability fix
 DASHBOARD 2.0 System Status widget readability fix
+DASHBOARD 2.0 News widget readability fix for some width
 
 02.10.2024
 ----------
@@ -541,6 +542,11 @@ th *, td * {
 [class^="list-with-images-module__wrapper--"] {
     gap: 8px;
     justify-content: center;
+}
+[class^="list-with-images-module__wrapper--"] > div:first-child {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
 }
 
 /* DASHBOARD 2.0 System Status widget readability fix */
